--- a/examples/ui/gradio/gradio-caikit-rag-pgvector-airgapped/Pipfile
+++ b/examples/ui/gradio/gradio-caikit-rag-pgvector-airgapped/Pipfile
@@ -14,7 +14,9 @@ torch = {version = "==2.0.1+cu118", index = "pytorch"}
 torchvision = {version = "==0.15.2+cu118", index = "pytorch"}
 gradio = "~=3.46.1"
 langchain = "==0.0.308"
-redis = "~=5.0.1"
+psycopg = "~=3.1.10"
+pgvector = "~=0.2.3"
+text-generation = "~=0.6.1"
 sentence-transformers = "~=2.2.2"
 grpcio = "~=1.51.3"
 grpcio-reflection = "~=1.51.3"
