--- a/examples/ui/gradio/gradio-hftgi-rag-pgvector-airgapped/Containerfile
+++ b/examples/ui/gradio/gradio-hftgi-rag-pgvector-airgapped/Containerfile
@@ -7,6 +7,7 @@ USER 1001
 COPY --chown=1001:0 requirements.txt ./
 
 RUN pip install --no-cache-dir -r requirements.txt && \
+    pip install --upgrade gradio && \
     rm -f requirements.txt && \
     # Fix permissions to support pip in Openshift environments \
     chmod -R g+w /opt/app-root/lib/python3.11/site-packages && \
