--- a/examples/ui/gradio/gradio-hftgi-rag-pgvector-airgapped/requirements.txt
+++ b/examples/ui/gradio/gradio-hftgi-rag-pgvector-airgapped/requirements.txt
@@ -14,6 +14,7 @@ click==8.1.7; python_version >= '3.7'
 cmake==3.27.7
 contourpy==1.2.0; python_version >= '3.9'
 cycler==0.12.1; python_version >= '3.8'
+caikit-nlp-client==0.0.8
 dataclasses-json==0.6.2; python_version >= '3.7' and python_version < '4.0'
 fastapi==0.104.1; python_version >= '3.8'
 ffmpy==0.3.1
@@ -54,7 +55,7 @@ packaging==23.2; python_version >= '3.7'
 pandas==2.1.3; python_version >= '3.9'
 pgvector==0.2.3; python_version >= '3.8'
 pillow==10.1.0; python_version >= '3.8'
-psycopg==3.1.12; python_version >= '3.7'
+psycopg==3.1.10; python_version >= '3.7'
 pydantic==2.5.1; python_version >= '3.7'
 pydantic-core==2.14.3; python_version >= '3.7'
 pydub==0.25.1
